[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Mobs/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 9.77109, 9.74794 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 47, 47 )

[sub_resource type="Animation" id=3]
length = 0.15
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, 1 ) ],
"method": "change_move_status"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "change_move_status"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.15
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( -1, 0 ) ],
"method": "change_move_status"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "change_move_status"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.15
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 1, 0 ) ],
"method": "change_move_status"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "change_move_status"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.15
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, -1 ) ],
"method": "change_move_status"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "change_move_status"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "skip_step"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_skip_step"
}, {
"args": [  ],
"method": "set_skip_step"
} ]
}

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.294118, 0.294118, 0.294118, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.6, 1.6 )
z_index = 1
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -16.0
margin_top = -32.0
margin_right = 44.0
margin_bottom = -18.0
text = "x: 0 y: 0"
valign = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Priority" type="Label" parent="."]
margin_left = -3.77779
margin_top = -5.0
margin_right = 4.22221
margin_bottom = 9.0
text = "0"

[node name="Animation" type="AnimationPlayer" parent="."]
anims/move_down = SubResource( 3 )
anims/move_left = SubResource( 4 )
anims/move_right = SubResource( 5 )
anims/move_up = SubResource( 6 )
anims/skip_step = SubResource( 7 )
[connection signal="mouse_entered" from="." to="." method="_on_Enemy_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Enemy_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
